[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/water level/WaterLevel.gd" type="Script" id=1]
[ext_resource path="res://src/water level/WaterPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/water level/WaterRabbit.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Water Level Background.png" type="Texture" id=4]
[ext_resource path="res://src/water level/WaterLevelUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/ground level/WinScreenGround.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 322, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 173 )

[node name="WaterLevel" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 320, 180 )
z_index = -1
texture = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 320, 179 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Walls" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2( 321, 69 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2( 321, 376 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls"]
position = Vector2( -10, 210 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Walls"]
position = Vector2( 652, 216 )
shape = SubResource( 2 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 60, 214 )

[node name="Rabbit" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 597, 209 )

[node name="LogSpawner" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="LogIncrease" type="Timer" parent="."]
wait_time = 40.0
autostart = true

[node name="UI" parent="." instance=ExtResource( 5 )]

[node name="WinScreen" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="timeout" from="LogSpawner" to="." method="_on_LogSpawner_timeout"]
[connection signal="timeout" from="LogIncrease" to="." method="_on_LogIncrease_timeout"]
